--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@ body {
 .-logo- {
   height: 200px;
   width: 300px;
+  columns: 12;
 }
 
 .grupal2023 {
@@ -61,10 +62,20 @@ img {
   max-width: 100%;
 }
 
-.container {
-  width: 80%;
+.container-fluid {
   margin: 0 auto;
+  width: 100%;
+  min-width: 360px;
   max-width: 1320px;
+  display: grid;
+}
+
+.container {
+  margin: 0 auto;
+  min-width: 360px;
+  max-width: 1320px;
+  text-align: center;
+  display: grid;
 }
 
 .header_1 {
@@ -107,4 +118,17 @@ h1 {
 
 h2 {
   text-align: center;
+}
+
+.navbar {
+  nav-up: auto;
+}
+
+.row {
+  padding: 5px;
+  margin: 10px;
+}
+
+.col {
+  columns: auto;
 }
