--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,15 +1,18 @@
 nav {
+  position: sticky;
+  width: auto;
+
   .navbar {
     nav-up: auto;
   }
 
   .nav__list {
     list-style: none;
-    display: flex;
+    display: contents;
   }
 
   .nav__item {
-    margin-left: 5.3rem;
+    margin-left: 7rem;
   }
 
   .nav__link {
