--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@ header {
   background-color: blue;
   text-transform: uppercase;
   width: auto;
+  overflow: auto;
 
   .container {
     margin: 0%;
