--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,13 +8,6 @@ body {
   font-family: "montserrat", sans-serif;
   background-color: aqua;
 }
-body div .container-fluid {
-  margin: 0 auto;
-  width: 100%;
-  min-width: 360px;
-  max-width: 1320px;
-  display: grid;
-}
 
 nav {
   position: sticky;
@@ -40,6 +33,7 @@ header {
   background-color: blue;
   text-transform: uppercase;
   width: auto;
+  overflow: auto;
 }
 header .container {
   margin: 0%;
@@ -66,7 +60,6 @@ section .container {
   min-width: 360px;
   max-width: 1320px;
   text-align: center;
-  position: sticky;
 }
 section .row {
   padding: 5px;
@@ -122,7 +115,6 @@ iframe .container {
   min-width: 360px;
   max-width: 1320px;
   text-align: center;
-  position: sticky;
 }
 iframe .-volley- {
   width: 100%;
@@ -133,7 +125,6 @@ footer .container {
   min-width: 360px;
   max-width: 1320px;
   text-align: center;
-  position: sticky;
 }
 footer .row {
   padding: 5px;
